--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,19 @@
     tools:context="com.mikiruki.pictdetector.activities.MainActivity">
 
 
-    <FrameLayout
-        android:id="@+id/camera_preview"
-        android:layout_width="368dp"
-        android:layout_height="495dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+    <com.mikiruki.pictdetector.wrappers.JavaCameraViewWrapper
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/camView"
+        app:camera_id="any"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
-    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
+
